Externalized CRON pattern

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ API_END_POINT=https://api.bamboohr.com/api/gateway.php/moneysmart/v1/
 BAMBOOHR_USERNAME=x
 BAMBOOHR_PASSWORD=x
 SLACK_INCOMING_WEBHOOK=x
+CRON_PATTERN='* * * * *'
